# DEMO

./: README.md
Cplaplas/: ATS67.cpp  (+24 more)
blackjack/: CMakeLists.txt  README.md  test.7z
blackjack/include/: Answer.h  Blackjack.h  Card.h  Deck.h  Group.h  Hand.h  Logos.h  Player.h  Register.h
blackjack/logos/: ascii_generator_type.txt  blackjack_slant.txt  blackjack_smisome1.txt  blackjack_speed.txt  blackjack_standard.txt  blackjack_stop.txt
blackjack/releases/: blackjack-v5.0.7z
blackjack/releases/JUEGO2UTEC/: CMakeLists.txt
blackjack/releases/JUEGO2UTEC/include/: Answer.h  Blackjack.h  Card.h  Deck.h  Group.h  Hand.h  Logos.h  Player.h  Register.h
blackjack/releases/JUEGO2UTEC/logos/: ascii_generator_type.txt  blackjack_slant.txt  blackjack_smisome1.txt  blackjack_speed.txt  blackjack_standard.txt  blackjack_stop.txt
blackjack/releases/blackjack-v1.0/: blackjack-v1.0.7z  blackjack-v1.0.tar.bz2
blackjack/releases/blackjack-v2.0/: blackjack-v2.0.7z
blackjack/releases/blackjack-v3.0/: blackjack-v3.0.7z
blackjack/releases/blackjack-v4.0/: blackjack-v4.0.7z  blackjack-v4.1.7z
blackjack/src/: Answer.cpp  Card.cpp  Deck.cpp  Group.cpp  Hand.cpp  Player.cpp  blackjack  blackjack.cpp  compilation_blackjack.txt  compilation_cmd_blackjack.txt
blackjack/test/: TestCard.cpp  blackjack_test.cpp  card_test.cpp  clear_terminal.cpp  debug-blackjack-src.txt  erase_element.cpp  hello.cpp  logos.cpp  output_multiline.cpp  rand_test.cpp  random_vector.cpp  raw_logos.py  show_options.cpp  simbols.cpp  stringToInt.cpp  testDeck.cpp  testHand.cpp  vector_pointer.cpp
(+14 files in other folders)
